TestRepo2/src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Calc10__c</fullName>
        <formula>IF(and(Beating_Comp_Diageo_Val_10__c&gt;0, Beating_Comp_Tot_Val_10__c&gt;0), (Beating_Comp_Diageo_Val_10__c / Beating_Comp_Tot_Val_10__c) * 100 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beating Comp Calc10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Calc1__c</fullName>
        <formula>IF(and(Beating_Comp_Diageo_Val_1__c&gt;0, Beating_Comp_Tot_Val_1__c&gt;0),  (Beating_Comp_Diageo_Val_1__c / Beating_Comp_Tot_Val_1__c)  * 100 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beating Comp Calc1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Calc2__c</fullName>
        <formula>IF(and(Beating_Comp_Diageo_Val_2__c&gt;0, Beating_Comp_Tot_Val_2__c&gt;0), (Beating_Comp_Diageo_Val_2__c / Beating_Comp_Tot_Val_2__c) * 100 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beating Comp Calc2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Diageo_Val_10__c</fullName>
        <label>Beating Comp Diageo Val 10</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Diageo_Val_1__c</fullName>
        <label>Beating Comp Diageo Val 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Diageo_Val_2__c</fullName>
        <label>Beating Comp Diageo Val 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Tot_Val_10__c</fullName>
        <label>Beating Comp Tot Val 10</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Tot_Val_1__c</fullName>
        <label>Beating Comp Tot Val 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Tot_Val_2__c</fullName>
        <label>Beating Comp Tot Val 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_Credit_Value_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Credit Value 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Credit_Value_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Credit Value 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Credit_Value_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Credit Value 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_Beating_the_Competition__c</fullName>
        <label>Score - Beating the Competition</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Distribution_Shelf_Display__c</fullName>
        <label>Score - Distribution Shelf Display</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Extra_Credit__c</fullName>
        <label>Score - Extra Credit</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Sustainovation__c</fullName>
        <label>Score - Innovation Sustainovation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Total__c</fullName>
        <label>Score - Total</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The layout record is used to determine how to display the survey data in its related dynamic layout.</description>
        <label>Survey Layout</label>
        <referenceTo>Survey_Layout__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <label>Survey Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Survey_Layout__c</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
    </listViews>
    <listViews>
        <fullName>My_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Survey_Layout__c</columns>
        <columns>Account__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Surveys</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>